fix section 2 alignment after previous changes

--- a/css/style.css
+++ b/css/style.css
@@ -46,19 +46,17 @@
     height:50px;
     background:darkgray;
 }
-.debug .col_30{
+.debug .col_30,
+.debug .col_45,
+.debug .col_50{
     height: 500px;
     background:coral;
-}
-.debug .plans .col_30{
-    height:900px;
-    background:darkkhaki;
 }
 .debug .card_pro{
     height:300px;
     background:rgb(245, 232, 48);
 }
-.debug .partner>img{
+.debug .partner img{
     height: 500px;
     background:darkturquoise;
 }
